[gd_scene load_steps=10 format=3 uid="uid://uafprr7riwjm"]

[ext_resource type="Script" uid="uid://fxahdnlqqgci" path="res://Scripts/Enemy Scripts/EnemyMelee.gd" id="1_a0bld"]
[ext_resource type="Material" uid="uid://41byjnpqi8jl" path="res://Materials/TestBush.tres" id="2_x0lkj"]
[ext_resource type="Material" uid="uid://coyp2b7pigfla" path="res://Materials/enemy2.tres" id="3_a0bld"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dp8bq"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_yu556"]
points = PackedVector3Array(-0.387079, -0.952867, -0.893173, 0.0286088, 0.919081, 0.0286088, 0.0286088, 0.919081, -0.0286088, 0.964119, -0.964119, 0.090221, -0.69589, -0.968294, 0.69589, 0.387079, -0.952867, 0.893173, 0.654605, -0.952357, -0.714081, -0.964119, -0.964119, -0.090221, 0.090221, -0.964119, -0.964119, -0.090221, -0.964119, 0.964119, -0.69589, -0.968294, -0.69589, 0.714081, -0.952357, 0.654605, 0.893173, -0.952867, -0.387079, -0.0286088, 0.919081, 0.0286088, -0.893173, -0.952867, 0.387079, -0.893173, -0.952867, -0.387079, -0.387079, -0.952867, 0.893173, 0.387079, -0.952867, -0.893173, 0.893173, -0.952867, 0.387079, -0.0286088, 0.919081, -0.0286088, 0.964119, -0.964119, -0.090221, 0.090221, -0.964119, 0.964119, -0.919554, -0.861947, 0.0574271, -0.0574271, -0.861947, -0.919554, 0.656224, -0.855898, -0.656046, 0.656224, -0.855898, 0.656046, 0.0572615, 0.689839, -0.143694, -0.143684, 0.68979, -0.0574375, 0.143694, 0.689839, 0.0572615, 0.0572615, 0.689839, 0.143694, -0.241132, -0.964526, -0.934314, 0.143694, 0.689839, -0.0572615)

[sub_resource type="BoxMesh" id="BoxMesh_r2bbj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k711p"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dp8bq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a0bld"]

[node name="MeleeEnemy" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_a0bld")
health = 100
attackHeight = 2.0
attackWidth = 3.0

[node name="HearingArea" type="Area3D" parent="." groups=["Enemy"]]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HearingArea" groups=["Enemy"]]
shape = SubResource("SphereShape3D_dp8bq")
debug_color = Color(0.138961, 0.599429, 0.670183, 1)

[node name="VisionArea" type="Area3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0.2, 0.581, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(-1.09278e-08, -0.25, 0, 0.25, -1.09278e-08, 0, 0, 0, 0.25, 0.232, 0, 0)
shape = SubResource("ConvexPolygonShape3D_yu556")

[node name="BulletSpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.544362, 0.573799, 0)

[node name="FrontMaker" type="MeshInstance3D" parent="BulletSpawnPoint" groups=["Bullet"]]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
material_override = ExtResource("2_x0lkj")
mesh = SubResource("BoxMesh_r2bbj")
skeleton = NodePath("../../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_k711p")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = ExtResource("3_a0bld")
mesh = SubResource("CapsuleMesh_dp8bq")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="AttackArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.911974, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
shape = SubResource("BoxShape3D_a0bld")

[connection signal="area_entered" from="HearingArea" to="." method="_on_hearing_area_entered"]
[connection signal="area_exited" from="HearingArea" to="." method="_on_hearing_area_exited"]
[connection signal="area_entered" from="VisionArea" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="VisionArea" to="." method="_on_vision_area_exited"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_exited"]
